--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -6,6 +6,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
+          repository: abystoma/external-workflow
           ref: ac67a68fb03857c5a95228d1bb0c414a76b2c78d
       - name: Greetings
         run: echo "$(<greetings.txt)"
